0.9.1
-------------------------------------------------------------------------
* Fixed build failure without ALSA.
* Added alternative mixers if build using OSS.
* Fixed panel flicker with some window managers.

0.9.0
-------------------------------------------------------------------------
* Added support for laptops with multiple batteries.
* Added a way to scroll through workspaces by using the scroll wheel over
    the deskno plugin.
* Bunch of fixes for GTK+ 3.0 compatibility.
* Fixed outdated lxpanel man page.
* Fixed weather locations query (since YQL was changed recently).
* Converted space plugin into internal PanelSpace widget in liblxpanel.
* Converted task button into widget class to avoid ambiguous code.
* Added support for third-party plugins localized descriptions.
* Implemented "lxpanelctl command ..." to send message to panel plugin.
* Added APIs for PanelIconGrid to draw focus on drop.
* Converted launch button into widget class for more easy management.
* Adjusted PanelIconGrid: min spacing is now 1, no_window flag is now
    left unset by default, spacing is taken into account on overall size
    to be consistent on chosen orientation.
* Implemented dropping file or folder onto launch bar to create launcher.
* Implemented dragging launchers around launchbars (between panels too).
* Implemented dropping file or folder onto free panel space to create
    launcher.
* Implemented dragging launchers from launchbar to some free panel space.
    When launcher dropped onto another place and former place's launchbar
    becomes empty, it will not be replaced with a bootstrapping icon (as
    it happens when last launcher is removed via configuration dialog)
    but launchbar will be removed from the panel instead, that behavior
    is more obvious and sensible.
* Added stripping scheme from URI menu://applications/... when a launcher
    is created, only menu-id itself should be used.